# MSR-Downloader

./: .gitignore  Cargo.toml  README.md  msr.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
gui/: index.html
gui/config/: postcss.config.cjs  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
gui/src/: App.svelte  app.css
src/: api.rs  cli_progress.rs  cli_style.rs  config.rs  download_session.rs  downloader.rs  file_fetcher.rs  format.rs  fs_util.rs  lib.rs  main.rs  metadata.rs  models.rs  progress.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/cli/: args.rs  clean.rs  commands.rs  config.rs  mod.rs
src/tui/: chrome.rs  controller.rs  download.rs  input.rs  layout.rs  mod.rs  overlay.rs  select.rs  state.rs  theme.rs
