[package]
name = "msr-downloader"
version = "0.5.0"
edition = "2021"
description = "Monster Siren Music Downloader"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
owo-colors = "4"
ratatui = "0.29"
crossterm = "0.28"
id3 = "1"
flacx = "0.1"
metaflac = "0.2.8"

[profile.release]
opt-level = 3
lto = true
